# staticish

./: LICENSE  README.markdown  static-site-generator.cabal  staticish.cabal
app/: Main.hs
lib/Network/: Staticish.hs
lib/Network/Staticish/: App.hs  CompileMarkdown.hs  Handlers.hs  Import.hs  Mutex.hs  OptionParsing.hs  Types.hs
posts/: haskell.markdown  ruby.markdown
public/: script.js  style.css
script/: run
src/: App.hs  CompileMarkdown.hs  Handlers.hs  Import.hs  Main.hs  Mutex.hs  OptionParsing.hs  Types.hs
views/: about.html  index.html  layout.html
