name:                static-site-generator
version:             0.1.0.0
synopsis:            A static site generator with support for dynamic responses
description:         Please see README.md
homepage:            http://github.com/davidpdrsn/static-site-generator#readme
license:             BSD3
license-file:        LICENSE
author:              David Pedersen
maintainer:          david.pdrsn@gmail.com
copyright:           2016 David Pedersen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable static-site-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
