name:                staticish
version:             0.1.0.0
synopsis:            A static site generator with support for dynamic responses
description:         Please see README.markdown
homepage:            http://github.com/davidpdrsn/static-site-generator#readme
license:             BSD3
license-file:        LICENSE
author:              David Pedersen
maintainer:          david.pdrsn@gmail.com
copyright:           2016 David Pedersen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:   lib
    exposed-modules:  Network.Staticish
    other-modules:    Network.Staticish.App
                      Network.Staticish.CompileMarkdown
                      Network.Staticish.Handlers
                      Network.Staticish.Import
                      Network.Staticish.Mutex
                      Network.Staticish.OptionParsing
                      Network.Staticish.Types
    default-language: Haskell2010

    default-extensions: TemplateHaskell
                        OverloadedStrings

    build-depends:     base >= 4.7 && < 5
                     , markdown
                     , text
                     , blaze-html
                     , wai
                     , http-types
                     , warp
                     , case-insensitive
                     , bytestring
                     , string-conversions
                     , containers
                     , directory
                     , filepath
                     , unix
                     , regex-compat
                     , aeson
                     , mtl
                     , optparse-applicative

executable         staticish
    main-is:           Main.hs
    hs-source-dirs:    app
    default-language:  Haskell2010
    build-depends:     base, staticish
    ghc-options:       -threaded -O2
